--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -126,7 +126,7 @@
       <a title="Green-fingered Green"><canvas class="canvas" onclick="dGreenChange()" height="50px" width="75px" style="background-color:#040;border-radius:5px;border-top:5px solid grey;border-left:5px solid grey;border-right:5px solid grey;border-bottom:12px solid grey;float:left;">:(</canvas></a>
       <p>&nbsp;</p><p>&nbsp;</p>
       <!--<button id="btn3">Deny Cookies</button>-->
-      <input type="text" placeholder="Change Nickname" id="changeNicknameBoxOfDoom" /><input type="submit" id="submitButtonOfDoom" onclick="changeNick()" />
+      <!--<input type="text" placeholder="Change Nickname" id="changeNicknameBoxOfDoom" /><input type="submit" id="submitButtonOfDoom" onclick="changeNick()" />-->
       <script>
       	function changeNick () {
 			var Box = document.getElementById("changeNicknameBoxOfDoom").value;
