--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<head>
 		<title>Jat Password</title>
-		<base target="_blank" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
 		<style>
 		    @import url('https://fonts.googleapis.com/css2?family=Share&display=swap');
@@ -13,6 +12,7 @@
 		    a#a3{text-decoration:none;color:#0000b3;}
 		    a#a4{text-decoration:none;color:#0000b3;}
 		    a#a5{text-decoration:none;color:#0000b3;}
+		    a#a6{text-decoration:none;color:#0000b3;}
 		    input{height:25px;width:200px;}
 		    p{font-size:20px;}
 		    h1[data-starData='h1-1']{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;
@@ -26,6 +26,15 @@
             .tooltip:hover .tooltip-text{visibility:visible;}
             .tooltip:hover{border-bottom:1px dotted black;}
             #tooltip1{width:200px !important;}
+            input[type="checkbox" i] {
+    background-color: initial;
+    cursor: default;
+    appearance: auto;
+    box-sizing: border-box;
+    margin: 3px 3px 3px 4px;
+    padding: initial;
+    border: initial;
+}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script>
@@ -58,7 +67,7 @@ document.onkeydown = function(e) {
 			  var usrname = document.getElementById("usrnameBox");
 			  var usrnameText = usrname.value;
 			  //me
-			  if (passwordText == "1Zw2dtp3wbh@hwgf1$" && usrnameText == "Carrot") {
+			  if (passwordText == "1Zw2dtp3wbh@hwgf1$b1k1$lm1" && usrnameText == "Carrot") {
 			  	return true;
 			  //edward
 			  } else if (passwordText == "CaRbON=C6" && usrnameText == "ELikesJat") {
@@ -80,6 +89,9 @@ document.onkeydown = function(e) {
 			  	return true;
 			  //millie
 			  } else if (passwordText == "taylorswift" && usrnameText == "millieg13") {
+			  	return true;
+			  //danny
+			  } else if (passwordText == "Danny1234" && usrnameText == "PickleYeet") {
 			  	return true;
 			  }
 			  var i = 0;
@@ -107,17 +119,19 @@ document.onkeydown = function(e) {
 	</head>
 	<body id="body">
     	<br /><h1 data-starData="h1-1" id="header"><span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span></h1>
-		<br /><fieldset class="fieldset"><legend>Log In</legend>
+		<br /><form action>
+		<fieldset class="fieldset"><legend>Log In</legend>
 		<p align="center">Username: <input id="usrnameBox" type="text" /></p>
-		<p align="center">Password: &nbsp;<input id="passwordBox" type="password" /><!--<button onclick="show()" style="height: 31px;"><i class="fa fa-eye"> </i></button>--></p>
+		<p align="center">Password: &nbsp;<input id="passwordBox" type="password" /></p>
 		<p align="center"><a target="_parent" href="2Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Details</a></p>
-		<h2 align="center" id="denied" style="font-weight:bold;color:red;"> </h2></fieldset>
+		<h2 align="center" id="denied" style="font-weight:bold;color:red;"> </h2></fieldset></form>
 		<br /><h3 align="center">Don't have a JatAccount? You must pass The Test Of Doom to get one. <a id="a5">
-			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text" id="tooltip1">The test may be confusing to you if you don't know what an Emibug is.
+			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text" id="tooltip1">The test may be confusing to you if you don't know what a J&ocirc;let is.
 			 		Just to warn you. If you can't take the test, see below for Logged Out Mode.</span></sup></a></h3></h3>
 		<h3 align="center">Take The Test Of Doom at <a href="thetest.html" id="a2">jomunatech.co.uk/thetest</a>.
 			 Or you can <a id="a3" href="u0/home.html">Use Jat Logged Out</a><a id="a4">
-			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text">You can use Jat logged out (incognito), but no settings that you set will be saved
+			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text">You can use Jat logged out (or incognito), but you can't use settings
 			 		and you cannot change your nickname or use JatPro, etc.</span></sup></a></h3>
+		<h3 align="center">Note: MaDefenders can be played logged out from the menu or you can find it <a href="madefenders.html" id="a6">here</a>.</h3>
 	</body>
 </html>
