--- a/madefenders.html
+++ b/madefenders.html
@@ -70,6 +70,10 @@
             <source src="Sounds/final-battle.wav" type="audio/wav">
             Oh No!
         </audio>
+		<audio id="victory_sound">
+            <source src="Sounds/victory.wav" type="audio/wav">
+            Oh No!
+        </audio>
 	    <p align="center"><sub>Engine Copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></p>
 		<script src="madefenders.js"></script>
 	</body>
