--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -293,6 +293,7 @@
             var thingBorder = localStorage.getItem("borderKey");
             document.getElementById("header").style.border = thingBorder;	
             document.getElementById("name").innerHTML = localStorage.getItem("name");
+            //setInterval(function(){ alert("Shoes"); }, 3000);
       	}
       </script>
   </div>
