--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@ document.onkeydown = function(e) {
 			  //danny
 			  } else if (passwordText == "Danny1234" && usrnameText == "PickleYeet") {
 			  	return true;
+			  //joe_s
+			  } else if (passwordText == "Password" && usrnameText == "Username") {
+			  	return true;
+			  //iolo
+			  } else if (passwordText == "hodgepodge" && usrnameText == "Blue Werewolf26") {
+			  	return true;
+			  //new
 			  }
 			  var i = 0;
               var txt = 'ACCESS DENIED. PLEASE TRY AGAIN. ';
