--- a/madefenders.html
+++ b/madefenders.html
@@ -5,6 +5,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="shortcut icon" href="Images/ma.ico" type="image/x-icon" />
         <base target="_blank" />
 		<style>
@@ -92,7 +93,6 @@
 		<div style="display:block;" id="menu" class="scores">
 			<br>Energy:&nbsp;&nbsp;<meter max="10" min="0" value="6" low="4" style="width:150px;" id="energy" optimum="10">/10</meter><br>
 			<br><h1>MaDefenders</h1>
-			<button onclick="testingc()">a</button>
 			<h1 id="displayLevel">Level 1/1: Ma HQ</h1>
 			<br><h2>Unlocked levels:</h2>
 			<br><h3 id="listofgames1">Level 1</h3>
@@ -118,7 +118,7 @@
             <source src="Sounds/victory.wav" type="audio/wav">
             Oh No!
         </audio>
-	    <p align="center"><sub>Engine Copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></p>
+	    <p align="center"><sub><a href="madefenders.js">Engine Copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></a></p>
 		<script src="madefenders.js"></script>
 		<script src="maaccessible.js"></script>
 	</body>
