--- a/u0/home.html
+++ b/u0/home.html
@@ -34,7 +34,7 @@
                     <a href="#">Jat Home&nbsp;<i class="fa fa-home" > </i></a>
                     <a href="../index.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i><br>(Log In)</a>
                     <a href="#">JatCloud&nbsp;<div id="div1" class="fa"> </div><br>(Log In)</a>
-                    <a href="#">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
+                    <a href="../shop/products.html">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
                     <a href="../madefenders.html">MaDefenders</a>
                </div>
             </div>
