--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -10,10 +10,20 @@
         <link rel="shortcut icon" href="Images/jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
+        <script>
+            function ifload() {
+              console.log("jatError#5131912::line410")
+              console.log("jatError#79208212::line412")
+            }
+        </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
         <!-- sc_xml data-starData attr_bisc -->
+        <title>JomunATech.co.uk | Jat</title>
+        <!-- data-starData="/head" -->
+    </head>
+    <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn(); ifload();" vlink="#0000b3" link="#0000b3">
         <script>
             window.onscroll = function() {scrollFunction()};
             function scrollFunction() {
@@ -24,10 +34,6 @@
                 }
             }
         </script>
-        <title>JomunATech.co.uk | Jat</title>
-        <!-- data-starData="/head" -->
-    </head>
-    <body data-starData="body-" id="body" onload="keepColour(); display_ct(); opn();" vlink="#0000b3" link="#0000b3">
         <div id="myModal" class="modal">
             <!-- Modal content -->
             <div class="modal-content">
@@ -94,7 +100,7 @@
                     <a href="homepageQueryJatPlusIndexFileThingy.html">JatPro&nbsp;<i class="fa fa-smile-o" > </i><svg viewBox="0 0 24 20" width="24" fill="black" stroke="black">
                         <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"> </path>
                     </svg></a>
-                    <a href="#">JatCloud&nbsp;<div id="div1" class="fa"> </div></a>
+                    <a href="#">JatCloud&nbsp;<i id="div1" class="fa"> </i></a>
                     <a href="shop/products.html">JatStore&nbsp;<i class="fa fa-shopping-bag" > </i></a>
                     <a href="madefenders.html">MaDefenders (YAY)</a>
                </div>
@@ -407,9 +413,9 @@ window.onclick = function(event) {
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         	<h2>Jat Details</h2>
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
-        	<p>Email: <a href="mailto:joh.jatowl@gmail.com">joh.jatowl@gmail.com</a>
-        	<br />Telephone: None because I am ten.
-        	<br />Github: <a href="https://github.com/Jat286/jat">github.com/Jat286/jat</a></p>
+        	<p>Email: <!--<a href="#">#</a>--><span style="background-color:red;">Temporarily Disabled (jatError#5131912::line410)</span>
+        	<br />Telephone: None because I am eleven.
+        	<br />Github: <span style="background-color:red;">Temporarily Disabled (jatError#79208212::line412)</span></p>
         	<hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
             <p>{JR-NC} Jomuneziun A Technology (Jat) 2015 - 2021
             <br /><a href="scDataStarDataAttr.xml">View Starcode Biscuit(s)</a> (this biscuit may be subject to {JR-NC})
