--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>Jat Password</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+        <link rel="shortcut icon" href="assets/Images/jatlogo.ico" type="image/x-icon" />  
 		<style>
 		    @import url('https://fonts.googleapis.com/css2?family=Share&display=swap');
 		    html{font-family:sans-serif;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;
@@ -26,15 +27,9 @@
             .tooltip:hover .tooltip-text{visibility:visible;}
             .tooltip:hover{border-bottom:1px dotted black;}
             #tooltip1{width:200px !important;}
-            input[type="checkbox" i] {
-    background-color: initial;
-    cursor: default;
-    appearance: auto;
-    box-sizing: border-box;
-    margin: 3px 3px 3px 4px;
-    padding: initial;
-    border: initial;
-}
+            input[type="checkbox" i]{background-color: initial;cursor: default;appearance: auto;box-sizing: border-box;
+                margin: 3px 3px 3px 4px;padding: initial;border: initial;}
+            #splash{text-align:center;color:#0000b3;font-size:17px;font-family:'share';}
 		</style>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<script>
@@ -125,13 +120,16 @@ document.onkeydown = function(e) {
 		</script>
 	</head>
 	<body id="body">
-    	<br /><h1 data-starData="h1-1" id="header"><span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span></h1>
-		<br /><form action>
+    	<br /><h1 data-starData="h1-1" id="header">
+    	          <span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span>
+    	</h1>
+    	<p id="splash">April Fools!</p>
+    	<form action>
 		<fieldset class="fieldset"><legend>Log In</legend>
 		<p align="center">Username: <input id="usrnameBox" type="text" /></p>
 		<p align="center">Password: &nbsp;<input id="passwordBox" type="password" /></p>
 		<p align="center"><a target="_parent" href="2Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html" onclick="return checkPassword();" id="a">Check Details</a></p>
-		<h2 align="center" id="denied" style="font-weight:bold;color:red;"> </h2></fieldset></form>
+		<h2 align="center" id="denied" style="font-weight:bold;color:red;"></h2></fieldset></form>
 		<br /><h3 align="center">Don't have a JatAccount? You must pass The Test Of Doom to get one. <a id="a5">
 			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text" id="tooltip1">The test may be confusing to you if you don't know what a J&ocirc;let is.
 			 		Just to warn you. If you can't take the test, see below for Logged Out Mode.</span></sup></a></h3></h3>
