--- a/shop/products.html
+++ b/shop/products.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="../asheetofstyles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-        <link rel="shortcut icon" href="Images/jatlogo2.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="..assets/Images/jatlogo.ico" type="image/x-icon" />
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
