--- a/homepageQueryJatPlusIndexFileThingy.html
+++ b/homepageQueryJatPlusIndexFileThingy.html
@@ -4,7 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="asheetofstyles.css" />
-        <link rel="shortcut icon" href="jatlogo2.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="assets/Images/jatlogo.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="cookies.js" type="text/javascript"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDAFTaabPhK44tV5e8SG3HCxXOx4eMzN9Y&callback=myMap"></script>
