--- a/madefenders.html
+++ b/madefenders.html
@@ -6,7 +6,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <link rel="shortcut icon" href="Images/ma.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="assets/Images/ma.ico" type="image/x-icon" />
         <base target="_blank" />
 		<style>
 			* {
@@ -26,7 +26,7 @@
                 float: left;
                 height: 400px;
                 width: 400px;
-                background-image: url('Images/ma.png');
+                background-image: url('assets/Images/ma.png');
                 background-size: cover;
                 z-index: 8;
             }
@@ -108,19 +108,19 @@
 			<br><a href="index.html">Return to Jat</a>
 		</div>
 		<audio id="ding">
-            <source src="Sounds/ding.wav" type="audio/wav">
+            <source src="assets/Sounds/ding.wav" type="audio/wav">
             Oh No!
         </audio>
 		<audio id="game_over_sound">
-            <source src="Sounds/game_over.wav" type="audio/wav">
+            <source src="assets/Sounds/game_over.wav" type="audio/wav">
             Oh No!
         </audio>
 		<audio id="final_battle_song">
-            <source src="Sounds/final-battle.wav" type="audio/wav">
+            <source src="assets/Sounds/final-battle.wav" type="audio/wav">
             Oh No!
         </audio>
 		<audio id="victory_sound">
-            <source src="Sounds/victory.wav" type="audio/wav">
+            <source src="assets/Sounds/victory.wav" type="audio/wav">
             Oh No!
         </audio>
 	    <p align="center"><sub><a href="madefenders.js">Engine Copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></a></p>
