--- a/u0/home.html
+++ b/u0/home.html
@@ -7,7 +7,7 @@
         <meta name="description" content="The Official Jat Website">
         <meta name="author" content="ME">
         <link rel="stylesheet" type="text/css" href="nouserstyles.css" />
-        <link rel="shortcut icon" href="../Images/jatlogo2.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="..assets/Images/jatlogo2.ico" type="image/x-icon" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
