--- a/homepageQueryJatPlusIndexFileThingy.html
+++ b/homepageQueryJatPlusIndexFileThingy.html
@@ -62,7 +62,8 @@ setInterval(openfolder, 1000);
     	<h3 style="font-size: 20px;margin-left: 10%;">Includes advanced JatApp technology,<br>
     		<span style="margin-left: 0%;">access to more JStorage and Johtifications plus extra</span><br>
     		<span style="margin-left: 0%;">bonus Jat secrets and more!</span></h3>
-    	<a data-starData="a" style="margin-left: 10%;" hidefocus="true" href="mailto:joh.jatowl@gmail.com?subject=JatPro%20Request&body=Hello%0D%0AII%20would%20like%20to%20subscribe%20to%20JatPro%20for%20__%20years.%20My%20username%20is%20___.%0D%0AThanks!%0D%0A%20%0D%0AFrom%20_____">Ask about joining!</a>
+    	<!-- <a data-starData="a" style="margin-left: 10%;" hidefocus="true" href="mailto:joh.jatowl@gmail.com?subject=JatPro%20Request&body=Hello%0D%0AII%20would%20like%20to%20subscribe%20to%20JatPro%20for%20__%20years.%20My%20username%20is%20___.%0D%0AThanks!%0D%0A%20%0D%0AFrom%20_____">Ask about joining!</a>-->
+    	<span style="background-color:red;">Temporarily Disabled (jatError#5131912::line66)</span>
     	<div class="vl"></div>
     	<h2 style="float: left;margin-left: 75%;margin-top: -185px;">Or use a JatGiftCode!</h2>
     	<h3 style="margin-left: 75%;margin-top: -135px;font-size: 20px;">Have one?<br>
