--- a/index.html
+++ b/index.html
@@ -94,8 +94,11 @@ document.onkeydown = function(e) {
 			  //iolo
 			  } else if (passwordText == "hodgepodge" && usrnameText == "Blue Werewolf26") {
 			  	return true;
+			  //ADMIN
+			  } else if (passwordText == "$3CR3T$!" && usrnameText == "USER_ADMIN") {
+				  	return true;
 			  //new
-			  }
+		      }
 			  var i = 0;
               var txt = 'ACCESS DENIED. PLEASE TRY AGAIN. ';
               var speed = 100;
