--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ document.onkeydown = function(e) {
 			  var usrname = document.getElementById("usrnameBox");
 			  var usrnameText = usrname.value;
 			  //me
-			  if (passwordText == "1Zw2dtp3wbh@hwgf1$b1k1$lm1" && usrnameText == "Carrot") {
+			  if (passwordText == "1Zw2dtp3wbh@hwgf1$@wn@13@" && usrnameText == "Carrot") {
 			  	return true;
 			  //edward
 			  } else if (passwordText == "CaRbON=C6" && usrnameText == "ELikesJat") {
@@ -96,6 +96,9 @@ document.onkeydown = function(e) {
 			  	return true;
 			  //ADMIN
 			  } else if (passwordText == "$3CR3T$!" && usrnameText == "USER_ADMIN") {
+				  	return true;
+			  //india
+		      } else if (passwordText == "PasswordOfSecrets1" && usrnameText == "india.levell") {
 				  	return true;
 			  //new
 		      }
