--- a/madefenders.html
+++ b/madefenders.html
@@ -105,6 +105,7 @@
 			<h3 id="listofgames3" style="display: none;">Level 3</h3>
 			<h3 id="listofgames4" style="display: none;">Level 4</h3>
 			<h3 id="listofgames5" style="display: none;">Level 5</h3>
+			<br><a href="story.html">Game Story + Credits [Please Read]</a><br>
 			<br><a href="index.html">Return to Jat</a>
 		</div>
 		<audio id="ding">
