Change MaDefenders Favicon

--- a/madefenders.html
+++ b/madefenders.html
@@ -85,7 +85,7 @@
 		</style>
 		<script>
 		    function notice() {
-		    	alert("New Level Data + Easter Egg!");
+		    	//alert("New Level Data + Easter Egg!");
 		    }
 		</script>
 	</head>
