Add &copy index.html + replace ma bg img

--- a/madefenders.html
+++ b/madefenders.html
@@ -124,7 +124,7 @@
             <source src="assets/Sounds/victory.wav" type="audio/wav">
             Oh No!
         </audio>
-	    <p align="center"><sub><a href="madefenders.js">Engine Copyright &copy; 2013 dissimulate at Codepen <sup>{JR}</sup> Name and Level design 2021 ME <sup>{JR}</sup> Jomunatech 2019 ME</sub></a></p>
+	    <p align="center">Game, logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021</p>
 		<script src="madefenders.js"></script>
 		<script src="maaccessible.js"></script>
 	</body>
