--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		    @import url('https://fonts.googleapis.com/css2?family=Share&display=swap');
 		    html{font-family:sans-serif;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;
 		      font-weight: bold;}
+		    html, body {margin: 0; height: 100%; overflow: hidden}
 		    a#a{text-decoration:none;color:#0000b3;font-size:25px;}
 		    a#a2{text-decoration:none;color:#0000b3;}
 		    a#a3{text-decoration:none;color:#0000b3;}
@@ -125,11 +126,11 @@ document.onkeydown = function(e) {
             }
 		</script>
 	</head>
-	<body id="body">
-    	<br /><h1 data-starData="h1-1" id="header">
+	<body id="body"><br/>
+	    <h1 data-starData="h1-1" id="header">
     	          <span style="color: #ff0040;">J</span><span style="color: #ff7500;">A</span><span style="color: #ffbf00;">T</span><span style="color: #080;">!</span>
-    	</h1>
-    	<p id="splash">April Fools!</p>
+    	</h1><br/>
+    	<!--<p id="splash">April Fools!</p>-->
     	<form action>
 		<fieldset class="fieldset"><legend>Log In</legend>
 		<p align="center">Username: <input id="usrnameBox" type="text" /></p>
@@ -144,5 +145,6 @@ document.onkeydown = function(e) {
 			 	<sup style="font-size:8px;cursor:pointer;" class="tooltip">[?]<span class="tooltip-text">You can use Jat logged out (or incognito), but you can't use settings
 			 		and you cannot change your nickname or use JatPro, etc.</span></sup></a></h3>
 		<h3 align="center">Note: MaDefenders can be played logged out from the menu or you can find it <a href="madefenders.html" id="a6">here</a>.</h3>
+		<p style="color: #0000b3;font-size:8px;text-align:center;">Logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021</p>
 	</body>
 </html>
