--- a/madefenders.html
+++ b/madefenders.html
@@ -20,9 +20,7 @@
             }
             canvas {
                 display:block;
-                border: 1px solid #333;
-                border-left: none;
-                box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+                border: none;
                 float: left;
                 height: 400px;
                 width: 400px;
@@ -36,8 +34,8 @@
                 margin: 40px auto 20px;
                 width: 300px;
                 text-align: center;
-                border: 1px solid #333;
-                box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+                border: none;
+                background-color: #ddd;
             }
             a {
             	text-decoration: none;
@@ -52,10 +50,10 @@
             	cursor:pointer;
             	border-radius:5px;
             	font-size:25px;
-            	width:100px;
+            	width:175px;
                 position: absolute;
-                top: 60%;
-                margin-left:38%;
+                top: 55%;
+                margin-left:29%;
                 background-color:#34bdff;
             }
             #playb2 {
@@ -66,17 +64,27 @@
             	font-size:25px;
             	width:175px;
                 position: absolute;
-                top: 75%;
+                top: 70%;
                 margin-left:29%;
                 background-color:red;
+            }
+            #playb3 {
+            	z-index: 99;
+            	height:45px;
+            	cursor:pointer;
+            	border-radius:5px;
+            	font-size:25px;
+            	width:175px;
+                position: absolute;
+                top: 85%;
+                margin-left:29%;
+                background-color:#ffbf00;
             }
             .container {
                 display:block;
                 margin: 40px auto 20px;
                 margin-left:20%;
-                border: 1px solid #333;
-                border-left: none;
-                box-shadow: 0 0 16px 2px rgba(0,0,0,0.8);
+                border: none;
                 float: left;
                 height: 400px;
                 width: 400px;
@@ -87,26 +95,28 @@
 		    function notice() {
 		    	//alert("New Level Data + Easter Egg!");
 		    }
+		    function info() {
+		    	window.location.replace("story.html");
+		    }
 		</script>
 	</head>
 	<body onload="notice()">
 		<div class="container">
 			<button onclick="runGame()" class="play" id="playb">Play</button>
 			<button onclick="runAGame()"id="playb2">Accessible Mode</button>
+			<button id="playb3" onclick="info()">Info</button>
 		    <canvas id="canvas" autofocus>MADEFENDERS NOT WORKING =(</canvas>
 		</div>
 		<div style="display:block;" id="menu" class="scores">
 			<br>Energy:&nbsp;&nbsp;<meter max="10" min="0" value="6" low="4" style="width:150px;" id="energy" optimum="10">/10</meter><br>
-			<br><h1>MaDefenders</h1>
-			<h1 id="displayLevel">Level 1/1: Ma HQ</h1>
-			<br><h2>Unlocked levels:</h2>
-			<br><h3 id="listofgames1">Level 1</h3>
-			<h3 id="listofgames2" style="display: none;">Level 2</h3>
-			<h3 id="listofgames3" style="display: none;">Level 3</h3>
-			<h3 id="listofgames4" style="display: none;">Level 4</h3>
-			<h3 id="listofgames5" style="display: none;">Level 5</h3>
-			<br><a href="story.html">Game Story + Credits [Please Read]</a><br>
-			<br><a href="index.html">Return to Jat</a>
+			<br><h1 style="font-size: 50px;"><span style="color:#34BDFF;">MA</span>DEFENDERS</h1>
+			<h1 id="displayLevel">Level 1|1: Ma HQ</h1>
+			<br/><h2>Levels Played:</h2>
+			<br><h3 id="listofgames1" style="font-size:20px;">Level 1</h3>
+			<h3 id="listofgames2" style="display: none;font-size:20px;">Level 2</h3>
+			<h3 id="listofgames3" style="display: none;font-size:20px;">Level 3</h3>
+			<h3 id="listofgames4" style="display: none;font-size:20px;">Level 4</h3>
+			<h3 id="listofgames5" style="display: none;font-size:20px;">Level 5</h3>
 		</div>
 		<audio id="ding">
             <source src="assets/Sounds/ding.wav" type="audio/wav">
@@ -124,7 +134,7 @@
             <source src="assets/Sounds/victory.wav" type="audio/wav">
             Oh No!
         </audio>
-	    <p align="center">Game, logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021</p>
+	    <p align="center">Game, logo and all names Copyright &copy; Jomuneziun A Technology 2015 - 2021 | <a href="index.html">Return to Jat</a></p>
 		<script src="madefenders.js"></script>
 		<script src="maaccessible.js"></script>
 	</body>
