--- a/madefenders.html
+++ b/madefenders.html
@@ -117,11 +117,11 @@
 			<br><h1 style="font-size: 50px;"><span style="color:#34BDFF;">MA</span>DEFENDERS</h1>
 			<h1 id="displayLevel">Level 1|1: Ma HQ</h1>
 			<br/><h2>Levels Played:</h2>
-			<br><h3 id="listofgames1" style="font-size:16.8px;">Level 1</h3>
-			<h3 id="listofgames2" style="display: none;font-size:16px;">Level 2</h3>
-			<h3 id="listofgames3" style="display: none;font-size:16px;">Level 3</h3>
-			<h3 id="listofgames4" style="display: none;font-size:16px;">Level 4</h3>
-			<h3 id="listofgames5" style="display: none;font-size:16px;">Level 5</h3>
+			<h3 id="listofgames1" style="font-size:16.8px;">Ma HQ</h3>
+			<h3 id="listofgames2" style="display: none;font-size:16px;">Ma Pyramid</h3>
+			<h3 id="listofgames3" style="display: none;font-size:16px;">Hify`lm Maze</h3>
+			<h3 id="listofgames4" style="display: none;font-size:16px;">Dark forest</h3>
+			<h3 id="listofgames5" style="display: none;font-size:16px;">T`Honzan Clouds</h3>
 		</div>
 		<audio id="ding">
             <source src="assets/Sounds/ding.wav" type="audio/wav">
