--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -366,7 +366,7 @@
             </script>
     	    <a id="topButton" href="#body">Scroll to Top</a>
     		<script>
-                var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable'];
+                var things = ['Amazing', 'Incredible', 'Brilliant', 'Mindblowing', 'Awe-striking', 'The Best', 'Remarkable', 'Really Not That Good'];
     			function text() {
                     var thing = things[Math.floor(Math.random()*things.length)];   	
                     var target = document.getElementById("toggleTarget");	
