--- a/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
+++ b/Ajnfd_jhJohUhHHuhdKpOKJdhjhdnNdjncsdjv_dfiRdkcdbmgklfvjJohknjsvn_HcnJvnnfjJJsajkfnJjfudUdnqjQJoh.html
@@ -414,7 +414,7 @@ window.onclick = function(event) {
         	<h2>Jat Details</h2>
     	    <hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
         	<p>Email: <!--<a href="#">#</a>--><span style="background-color:red;">Temporarily Disabled (jatError#5131912::line410)</span>
-        	<br />Telephone: None because I am eleven.
+        	<br />Telephone: <span style="background-color:red;">Temporarily Disabled (jatError#205125::line411)</span>
         	<br />Github: <span style="background-color:red;">Temporarily Disabled (jatError#79208212::line412)</span></p>
         	<hr style="margin-left:-8px;margin-right:-8px;background-color:black; height:3px; border: none;" />
             <p>{JR-NC} Jomuneziun A Technology (Jat) 2015 - 2021
