--- a/story.html
+++ b/story.html
@@ -14,6 +14,8 @@ TOMO TECHNOLOGY FOUR AND JATGAMES PRESENT<br/><br/>
 
 <span style="font-size:72px;"><span style="color:#34bdff;">MA</span>DEFENDERS</span><br/><br/>
 
+CREDITS<br/><br/>
+
 Acknowledgement:<br/>
 This game is based on the original Engine (Copyright (c) 2013 dissimulate at Codepen (codepen.io))<br/>
 Credits:<br/>
@@ -29,12 +31,12 @@ Jump: <i class="fa fa-arrow-up" aria-hidden="true"></i> / SPACE <br/><br/>
 
 GAME STORY<br/><br/>
 The Sacred Ma of the Tomobugs was once kept in the three Temples of The Ma in The Jungle. <br/>
-While they remained safe, the people of t'Honza were happy and well. One fateful day,<br/>
-10000 years ago, a dark spirit called Evilz caused three great calamities in the city <br/>
+While they remained safe, the bugs of t'Honza were happy and well. One fateful day,<br/>
+10000 years ago, a dark spirit called EvilZ caused three great calamities in the city <br/>
 and in each one he snuck into the temples to steal the sacred pieces of The Ma. You are a <br/>
 young Tomobug who is a member of the MaDefenders, a secret group of bugs determined to <br/>
 save The Ma. You start your mission by making your way through MaDefenders HQ before<br/>
-heading out into the Desert and beyond... Can you save The Ma from Evilz? No-one knows.<br/><br/>
+heading out into the Desert and beyond... Can you save The Ma from EvilZ? No-one knows.<br/><br/>
 
 LEGAL STUFF (I found and copied this!)<br/><br/>
 
